docs/version-1.34/modules/zh/nav.adoc
include::partial$variables.adoc[]
* xref:introduction.adoc[简介]
* xref:quick-start.adoc[]
* 教程
** xref:tutorials/writing-policies/index.adoc[]
*** xref:tutorials/writing-policies/CEL/01-intro-cel.adoc[]
**** xref:tutorials/writing-policies/CEL/02-reusing-vap.adoc[]
**** xref:tutorials/writing-policies/CEL/03-context-aware.adoc[]
**** xref:tutorials/writing-policies/CEL/04-example-sigstore.adoc[]
*** xref:tutorials/writing-policies/rust/01-intro-rust.adoc[]
**** xref:tutorials/writing-policies/rust/02-create-policy.adoc[]
**** xref:tutorials/writing-policies/rust/03-define-policy-settings.adoc[]
**** xref:tutorials/writing-policies/rust/04-write-validation-logic.adoc[]
**** xref:tutorials/writing-policies/rust/05-mutation-policy.adoc[]
**** xref:tutorials/writing-policies/rust/06-logging.adoc[]
**** xref:tutorials/writing-policies/rust/07-build-and-distribute.adoc[]
**** xref:tutorials/writing-policies/rust/08-raw-policies.adoc[]
*** xref:tutorials/writing-policies/go/01-intro-go.adoc[]
**** xref:tutorials/writing-policies/go/02-scaffold.adoc[]
**** xref:tutorials/writing-policies/go/03-policy-settings.adoc[]
**** xref:tutorials/writing-policies/go/04-validation.adoc[]
**** xref:tutorials/writing-policies/go/05-e2e-tests.adoc[]
**** xref:tutorials/writing-policies/go/06-logging.adoc[]
**** xref:tutorials/writing-policies/go/07-automate.adoc[]
**** xref:tutorials/writing-policies/go/08-distribute.adoc[]
**** xref:tutorials/writing-policies/go/09-validation-with-queries.adoc[]
**** xref:tutorials/writing-policies/go/10-raw-policies.adoc[]
*** xref:tutorials/writing-policies/rego/01-intro-rego.adoc[]
**** xref:tutorials/writing-policies/rego/02-builtin-support.adoc[]
**** 开放策略代理
***** xref:tutorials/writing-policies/rego/open-policy-agent/01-intro.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/02-create-policy.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/03-build-and-run.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/04-distribute.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/05-raw-policies.adoc[]
**** 守门人
***** xref:tutorials/writing-policies/rego/gatekeeper/01-intro.adoc[]
***** xref:tutorials/writing-policies/rego/gatekeeper/02-create-policy.adoc[]
***** xref:tutorials/writing-policies/rego/gatekeeper/03-build-and-run.adoc[]
***** xref:tutorials/writing-policies/rego/gatekeeper/04-distribute.adoc[]
*** xref:tutorials/writing-policies/dotnet.adoc[]
*** TypeScript
**** xref:tutorials/writing-policies/typescript/01-intro-typescript.adoc[]
**** xref:tutorials/writing-policies/typescript/02-scaffold.adoc[]
**** xref:tutorials/writing-policies/typescript/03-policy-settings.adoc[]
**** xref:tutorials/writing-policies/typescript/04-validation.adoc[]
**** xref:tutorials/writing-policies/typescript/05-e2etests.adoc[]
*** xref:tutorials/writing-policies/swift.adoc[]
*** xref:tutorials/writing-policies/other-languages.adoc[]
*** WASI
**** xref:tutorials/writing-policies/wasi/01-intro-wasi.adoc[]
**** xref:tutorials/writing-policies/wasi/02-raw-policies.adoc[]
*** xref:tutorials/writing-policies/metadata.adoc[]
** 测试策略
*** xref:tutorials/testing-policies/index.adoc[]
*** xref:tutorials/testing-policies/02-policy-authors.adoc[]
*** xref:tutorials/testing-policies/03-cluster-operators.adoc[]
** xref:tutorials/verifying-kubewarden.adoc[]
** xref:tutorials/publish-policy-to-artifact-hub.adoc[]
* 原理说明
** xref:explanations/mutating-policies.adoc[]
** xref:explanations/context-aware-policies.adoc[]
** xref:explanations/policy-groups.adoc[]
** xref:explanations/certificates.adoc[]
** xref:explanations/distributing-policies.adoc[]
** 比较
*** xref:explanations/comparisons/opa-comparison.adoc[]
** xref:explanations/audit-scanner/audit-scanner.adoc[]
*** xref:explanations/audit-scanner/limitations.adoc[]
*** xref:explanations/audit-scanner/policy-reports.adoc[]
** xref:explanations/architecture.adoc[{short-project-name} 体系结构]
* Howto
** xref:howtos/tasks.adoc[]
** xref:howtos/install-kwctl.adoc[安装 `kwctl`]
** xref:howtos/production-deployments.adoc[生产部署]
** xref:howtos/deploy-at-scale.adoc[大规模部署]
** xref:howtos/audit-scanner.adoc[]
** xref:howtos/policies.adoc[]
** xref:howtos/policies-eval-resources-in-controller-namespace.adoc[]
** xref:howtos/emergency-disable.adoc[]
** 配置策略服务器
*** xref:howtos/policy-servers/01-custom-cas.adoc[使用自定义 CA]
*** xref:howtos/policy-servers/02-private-registry.adoc[]
*** xref:howtos/policy-servers/03-production-deployments.adoc[生产部署]
*** xref:howtos/policy-servers/04-using-proxies.adoc[使用代理]
*** xref:howtos/policy-servers/05-private-sigstore.adoc[为私有 Sigstore 实例配置策略服务器]
** xref:howtos/policy-groups.adoc[策略组]
** xref:howtos/psp-migration.adoc[PSP 迁移]
** xref:howtos/vap-migration.adoc[]
** xref:howtos/pod-security-admission-with-kubewarden.adoc[Pod 安全准入]
** xref:howtos/custom-certificate-authorities.adoc[]
** xref:howtos/proxy-configuration.adoc[]
** xref:howtos/raw-policies.adoc[]
** xref:howtos/argocd-installation.adoc[]
** xref:howtos/security-hardening/security-hardening.adoc[安全性]
*** xref:howtos/security-hardening/secure-supply-chain.adoc[]
*** xref:howtos/security-hardening/webhook-mtls.adoc[在 K3s 中启用 mTLS]
** 隔离
*** xref:howtos/airgap/01-requirements.adoc[要求]
*** xref:howtos/airgap/02-install.adoc[安装]
*** xref:howtos/airgap/03-hauler.adoc[Hauler 安装]
** 遥测快速入门
*** xref:howtos/telemetry/10-opentelemetry-qs.adoc[]
*** xref:howtos/telemetry/20-tracing-qs.adoc[]
*** xref:howtos/telemetry/30-metrics-qs.adoc[]
*** xref:howtos/telemetry/40-custom-otel-collector.adoc[]
** xref:howtos/Rancher-Fleet.adoc[Rancher Fleet]
** Rancher UI 扩展
*** xref:howtos/ui-extension/01-install.adoc[快速入门]
*** xref:howtos/ui-extension/02-metrics.adoc[]
*** xref:howtos/ui-extension/03-tracing.adoc[]
** Rancher 应用程序集合
*** xref:howtos/application-collection/01-verify-images.adoc[验证镜像]
** 解决方案
*** xref:howtos/workarounds/policy-server-certificate-expiry.adoc[证书轮换，版本 ≥ v1.16]
** xref:howtos/contribution-guide/contribution-guide.adoc[]
*** xref:howtos/contribution-guide/contributing.adoc[贡献文档]
*** xref:howtos/contribution-guide/suggesting-an-improvement.adoc[改进文档]
** xref:howtos/gatekeeper-migration.adoc[]
* 参考手册
** xref:reference/CRDs.adoc[]
** xref:reference/dependency-matrix.adoc[]
** xref:reference/artifacts.adoc[工件]
** xref:reference/upgrade-path.adoc[]
** xref:reference/metrics-reference.adoc[]
** xref:reference/monitor-mode.adoc[]
** 策略规范
*** xref:reference/spec/01-intro-spec.adoc[]
*** xref:reference/spec/02-settings.adoc[]
*** xref:reference/spec/03-validating-policies.adoc[]
*** xref:reference/spec/04-mutating-policies.adoc[]
*** xref:reference/spec/05-context-aware-policies.adoc[]
*** 主机能力
**** xref:reference/spec/host-capabilities/01-intro-host-capabilities.adoc[]
**** xref:reference/spec/host-capabilities/02-signature-verifier-policies.adoc[]
**** xref:reference/spec/host-capabilities/03-container-registry.adoc[]
**** xref:reference/spec/host-capabilities/04-net.adoc[]
**** xref:reference/spec/host-capabilities/05-crypto.adoc[]
**** xref:reference/spec/host-capabilities/06-kubernetes.adoc[]
** xref:reference/oci-registries-support.adoc[]
** 安全性
*** xref:reference/security-hardening/webhooks-hardening.adoc[网络钩子]
** xref:reference/threat-model.adoc[]
** xref:reference/policy-evaluation-timeout.adoc[]
** xref:reference/verification-config.adoc[]
** xref:reference/sources_yaml.adoc[]
** xref:reference/kwctl-cli.adoc[`kwctl` CLI]
** xref:reference/policy-server-cli.adoc[策略服务器 CLI]
* xref:personas.adoc[适用于谁？]
* xref:use-cases.adoc[使用案例]
* xref:organization.adoc[公司]
* xref:enterprise.adoc[Enterprise]
* xref:glossary.adoc[]
* xref:disclosure.adoc[]
